--- a/emailTemplates/resetPasswordEmail.mjml
+++ b/emailTemplates/resetPasswordEmail.mjml
@@ -1,7 +1,7 @@
 <mjml>
   <mj-head>
-    <mj-title>FreshFarm - Password Reset Request</mj-title>
-    <mj-preview>You've requested to reset your FreshFarm password. Click here to reset.</mj-preview>
+    <mj-title>FrischeFarm - Password Reset Request</mj-title>
+    <mj-preview>You've requested to reset your FrischeFarm password. Click here to reset.</mj-preview>
     <mj-font name="Lato" href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700" />
     <mj-style>
       .body-section {
@@ -21,7 +21,7 @@
   <mj-body background-color="#f0fdf4">
     <mj-section css-class="body-section">
       <mj-column>
-        <mj-image width="180px" src="https://placehold.co/180x60/166534/FFFFFF?text=FreshFarm" alt="FreshFarm Logo" />
+        <mj-image width="450px" src="https://i.imgur.com/M38Ks4y.png" alt="FrischeFarm Logo" />
       </mj-column>
     </mj-section>
 
@@ -43,7 +43,7 @@
         </mj-text>
         <mj-text padding-top="15px" font-size="14px" color="#555555">
           <p>If you did not request a password reset, please ignore this email. Your password will remain unchanged.</p>
-          <p>Thanks,<br/>The FreshFarm Team</p>
+          <p>Thanks,<br/>The FrischeFarm Dev Team</p>
         </mj-text>
       </mj-column>
     </mj-section>
@@ -56,7 +56,7 @@
           <mj-social-element name="twitter" href="https://mjml.io/"></mj-social-element>
         </mj-social>
         <mj-text align="center" font-size="12px" line-height="1.5" color="#555555">
-          <p>You received this email because a password reset was requested for your FreshFarm account. <br /> © 2024 FreshFarm Inc. All rights reserved.</p>
+          <p>You received this email because a password reset was requested for your FrischeFarm account. <br /> © 2025 FrischeFarm Inc. All rights reserved.</p>
         </mj-text>
       </mj-column>
     </mj-section>
